[package]
name = "nebula-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description = "Core UI components and controllers for Nebula"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
egui = {version = "0.33.0"}
egui_extras = "0.33.0"
egui_flex = "0.5.0"
egui_dock = "0.17.0"
egui_file = "0.24"
egui-dropdown = "0.13.0"
egui-datepicker = "0.3.0"
eframe = { version = "0.33.0", features = ["glow"] }
egui_glow = "0.33.0"

instant = { version = "0.1", features = ["wasm-bindgen"] }
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Builder pattern via bon (for Container::builder() syntax)
bon = "3.8.1"

# Optional
tracing = { version = "0.1", optional = true }

[dev-dependencies]
# eframe уже есть в dependencies, не нужен здесь

[features]
default = []
logging = ["tracing"]
