[package]
name = "flui-animation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Animation system for FLUI framework - persistent animation objects"
keywords = ["ui", "animation", "flutter", "rust"]
categories = ["gui"]

[lints]
workspace = true

[dependencies]
# Core FLUI types
flui-types = { path = "../flui-types" }
flui-foundation = { path = "../flui-foundation" }
flui-scheduler = { path = "../flui-scheduler" }
# `#[derive(Animatable)]` — re-exported below for user-defined spring-animatable types.
flui-macros = { path = "../flui-macros" }

# Concurrency
parking_lot.workspace = true

# Utility
thiserror.workspace = true
smallvec.workspace = true
tracing.workspace = true

# Serialization (optional)
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
## Enable serde serialization/deserialization support for animation types.
serde = ["dep:serde", "flui-types/serde"]

[[bench]]
name = "animation_bench"
harness = false
