[package]
name = "flui-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Application framework for FLUI - Flutter-inspired UI"

[lib]
crate-type = ["rlib"]

[features]
default = ["desktop"]

# === Platform Features ===
desktop = []
android = []
ios = []
web = []

# === Debug Features ===
debug-overlay = []
performance-overlay = []

[dependencies]
# Core FLUI crates
flui-view = { path = "../flui-view" }
flui-rendering = { path = "../flui-rendering" }
# Concrete render-object catalog (moved out of flui-rendering per ADR-0008).
flui-objects = { path = "../flui-objects" }
flui-types = { path = "../flui-types" }
flui-foundation = { path = "../flui-foundation" }
flui-interaction = { path = "../flui-interaction" }
flui-scheduler = { path = "../flui-scheduler" }
flui-painting = { path = "../flui-painting" }
flui-layer = { path = "../flui-layer" }
flui-semantics = { path = "../flui-semantics" }
flui-engine = { path = "../flui-engine" }
flui-platform = { path = "../flui-platform" }
flui-hot-reload = { path = "../flui-hot-reload" }
flui-animation = { path = "../flui-animation" }
# Widget catalog: provides `VsyncScope`, which `AppBinding::attach_root_widget*`
# auto-wraps the root in so implicit-animation widgets work with zero boilerplate.
# Zero new link-time deps: every crate flui-widgets pulls is already transitively
# present in flui-app's closure (verified via `cargo tree -p flui-app`); this adds
# only a direct Cargo edge + re-exports. FOUNDATIONS.md targets app → widgets.
flui-widgets = { path = "../flui-widgets" }

# Utilities
tracing.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
raw-window-handle.workspace = true
pollster = "0.4"
web-time = "1.1"

# Web/WASM platform (runner spawns the frame loop via spawn_local)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# Android platform (android_main entry point needs AndroidApp type)
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }

[dev-dependencies]
# Enable flui-interaction's `testing` feature in test builds so tests can
# construct synthetic pointer events via `events::make_*_event`. Feature
# unification keeps these helpers out of the release `flui-app` binary.
flui-interaction = { path = "../flui-interaction", features = ["testing"] }
# Enable flui-rendering's `testing` feature in test builds so wiring tests can
# seed pending child-build requests via `push_pending_child_request_for_test`.
# Same dev-only feature-unification pattern; helper stays out of release builds.
flui-rendering = { path = "../flui-rendering", features = ["testing"] }
