[package]
name = "flui-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance asset management with smart caching, type safety, and async I/O"
repository.workspace = true
readme = "README.md"
keywords = ["assets", "cache", "async", "game", "ui"]
categories = ["asynchronous", "caching", "game-development", "gui"]
documentation = "https://docs.rs/flui-assets"

[dependencies]
# Internal dependencies
flui-types = { path = "../flui-types" }

# Async runtime
tokio = { workspace = true, features = ["fs", "io-util"] }

# High-performance cache
moka = { version = "0.12", features = ["future"] }

# String interning for efficient asset keys
lasso = { version = "0.7", features = ["multi-threaded"] }

# Sync primitives
parking_lot = { workspace = true }
once_cell = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization (for bundles feature)
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Image loading
image = { workspace = true, optional = true }

# Optional: Network loading
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { workspace = true }

[features]
default = []

## Core Features
##
## Enable specific asset types and loading capabilities:

# Enable serde serialization/deserialization (bundles, manifests)
serde = ["dep:serde", "dep:serde_json"]

# Enable image loading (PNG, JPEG, GIF, WebP, etc.)
images = ["dep:image"]

# Enable network-based asset loading via HTTP/HTTPS
network = ["dep:reqwest"]

## Future Features (Coming Soon)
##
## Performance optimizations and development tools:

# File watching for hot-reload during development
# hot-reload = ["notify"]

# Memory-mapped font loading for reduced memory usage
# mmap-fonts = ["memmap2"]

# Parallel image/video decoding for faster loading
# parallel-decode = ["rayon"]

## Convenience Feature Sets

# Enable all stable features (recommended for applications)
full = ["serde", "images", "network"]

[[example]]
name = "basic_usage"
required-features = []
