[package]
name = "flui-assets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance asset management with smart caching, type safety, and async I/O"
repository.workspace = true
readme = "README.md"
keywords = ["assets", "cache", "async", "game", "ui"]
categories = ["asynchronous", "caching", "game-development", "gui"]
documentation = "https://docs.rs/flui-assets"

[dependencies]
# Internal dependencies
flui-types = { path = "../flui-types", version = "0.2.0" }

# Async runtime. "sync" backs the bridged-load completion channel
# (`registry::bridge`); "rt-multi-thread" builds the single-worker background
# runtime `AssetRegistry::load_image_bridged` spawns onto when no runtime was
# injected and none is ambient.
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt-multi-thread"] }

# High-performance cache
moka = { workspace = true }

# String interning for efficient asset keys
lasso = { workspace = true }

# Sync primitives
parking_lot = { workspace = true }
once_cell = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Image loading
image = { workspace = true, optional = true }

# Optional: Network loading
reqwest = { workspace = true, optional = true }

[dev-dependencies]
# "macros" backs `#[tokio::test]`; "time" backs `tokio::time::timeout` — the
# hermetic network-loader test's hang guard (a wedged exchange must fail the
# test, not wedge CI). "rt-multi-thread" is already a main dependency feature
# (see above).
tokio = { workspace = true, features = ["macros", "time"] }

[features]
default = []

## Core Features
##
## Enable specific asset types and loading capabilities:

# Enable image loading (PNG, JPEG, GIF, WebP, etc.)
images = ["dep:image"]

# Enable network-based asset loading via HTTP/HTTPS
network = ["dep:reqwest"]

## Future Features (Coming Soon)
##
## Performance optimizations and development tools:

# File watching for hot-reload during development
# hot-reload = ["notify"]

# Memory-mapped font loading for reduced memory usage
# mmap-fonts = ["memmap2"]

# Parallel image/video decoding for faster loading
# parallel-decode = ["rayon"]

## Convenience Feature Sets

# Enable all stable features (recommended for applications)
full = ["images", "network"]

[lints]
workspace = true
