[package]
name = "flui-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Build system library for FLUI framework - handles cross-platform builds"
keywords = ["flui", "build", "cross-platform", "android", "wasm"]
categories = ["development-tools::build-utils"]

[dependencies]
# All dependencies from workspace
thiserror.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
which.workspace = true
indicatif.workspace = true                           # Progress bars for build status

[dev-dependencies]
tempfile.workspace = true
# The `progress_demo` example runs an async main + spawns tasks; these features
# are example/test-only so the library itself stays minimal (process + io-util).
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
